# GBEmu

./: .gitignore  CMakeLists.txt  Makefile  env.yml
roms/: check  dmg_only.asm  dmgbin.txt  dmghex.txt
src/: main.c  utils.c  utils.h
src/exec/: exec_tools.c  exec_tools.h  executor.c  executor.h
src/hard/: hwr_regs.c  hwr_regs.h  regs.c  regs.h
src/parser/: executor.c  executor.h  operand_accessor.c  operand_accessor.h  operand_list.c  operand_list.h  operators_list.c  operators_list.h  parser.c  parser.h
src/ram/: ram.c  ram.h  vram.c  vram.h
src/ui/: ui.c  ui.h
src/ui/debug/: debug.h
